# HelloCuda

./: .gitignore  CMakeLists.txt
src/: RTX 4090 测试卡信息.md  main.cpp
src/block-reduce/: block_all_reduce.cu  block_all_reduce_sum_bf16_bf16_kernel.cu  block_all_reduce_sum_bf16_f32_kernel.cu  block_all_reduce_sum_bf16x2_bf16_kernel.cu  block_all_reduce_sum_bf16x2_f32_kernel.cu  block_all_reduce_sum_bf16x8_pack_f32_kernel.cu  block_all_reduce_sum_f16_f16_kernel.cu  block_all_reduce_sum_f16x2_f32_kernel.cu  block_all_reduce_sum_f16x8_pack_f16_kernel.cu  block_all_reduce_sum_f32_f32_kernel.cu  block_all_reduce_sum_f32x4_f32_kernel.cu  block_all_reduce_sum_fp8_e4m3_f16_kernel.cu  block_all_reduce_sum_fp8_e4m3x16_pack_f16_kernel.cu  block_all_reduce_sum_fp8_e5m2_f16_kernel.cu  block_all_reduce_sum_int8_kernels.cu  nsight-usage.md  warp_reduce_sum_f32_kernel.cu
src/cuda-basics/: 01_idxing.cu  CudaBasics.h  nvtx_matmul.cu  stream_basic.cu
src/dot-product/: dot_prod_f16_f32_kernels.cu  dot_prod_f32_f32_kernel.cu  dot_prod_f32x4_f32_kernel.cu  dot_product.cu
src/elementwise/: README.md  elementwise.cu
src/embedding/: embedding.cu
src/gelu/: gelu.cu  gelu.md
src/hardshrink/: hardshrink.cu  hardshrink.md
src/hgemv/: hgemv.cu  hgemv_kernels.cu
src/histogram/: histogram.cu
src/kernels/: atomic_add.cu  cuda_memory.cu  cuda_memory.h  kernel1.cu  kernel2.cu  kernels.h  matrix_mul.cu  vector_add.cu
src/layer-norm/: README.md  layer_norm.cu  layer_norm_f16_f16_kernel.cu  layer_norm_f16_f32_kernel.cu  layer_norm_f16x2_f16_kernel.cu  layer_norm_f16x8_pack_f32_kernel.cu  layer_norm_f32_kernels.cu
src/mat-transpose/: mat_transpose.cu
src/nms/: nms.cu  nms.md
src/rand/: cpu_multi_threads.cpp  curand_kernel.cu  curand_runtime.cu
src/relu/: relu.cu  relu.md
src/rms-norm/: rms_norm.cu  rms_norm_f16_kernels.cu  rms_norm_f32_kernels.cu
src/rope/: ROPE旋转位置编码公式.md  rope.cu  rope_f32_kernels.cu  二维向量旋转公式.md
src/sgemm/: CUDA_CP_ASYNC_GROUP.md  CUDA地址空间概念.md  WMMA和K-STAGE.md  __fmaf_rn融合乘加API.md  memory_bandwidth_test.cu  run_sgemm_test.sh  sgemm.cu  sgemm_async.cu  sgemm_async_test.cu  sgemm_bench.cu  sgemm_cublas.cu  sgemm_test.cu  sgemm_wmma_tf32_stage.cu  sgemm_wmma_tf32_stage_test.cu
src/sgemv/: sgemv.cu  sgemv_fp32_kernels.cu
src/sigmoid/: sigmoid.cu  sigmoid.md  数值计算.md
src/softmax/: README.md  online_safe_softmax_f32_kernels.cu  safe_softmax_f16_f32_kernels.cu  safe_softmax_f32_kernels.cu  softmax.cu  softmax_f32_kernels.cu  字节对齐.md
src/swish/: hardswish.cu  swish.cu  swish.md
